# app/web/api/index.js
@@ -1,6 +1,20 @@
 import request from 'framework/clientRequest'
+import _lodash from 'lodash'
+import webStorage from '@webUtil/storage'
+import {storageKey} from '@webConfig'
 
-export const getUserInfo = (params) => request.get('/v1/user', params)
+export const getUserInfo = (params) => {
+  return new Promise(async (resolve, reject) => {
+    let res = webStorage.get(storageKey.userInfo) || await request.get('/v1/user', params)
+    const status = _lodash.get(res, 'data.data.user_info.status', false)
+    if (status) {
+      webStorage.set(storageKey.userInfo, res)
+    } else {
+      webStorage.set(storageKey.userInfo, null)
+    }
+    resolve(res)
+  })
+}
 
 export const getGoods = (params) => request.get('/v1/goods', params)
 
@@ -19,3 +33,5 @@ export const getOrderListGoods = (order_id, params) => request.get(`/v1/order/${
 export const getAddressById = (address_id, params) => request.get(`/v1/address/${address_id}`, params)
 
 export const createAndRegistUser = (params) => request.post('/v1/user', params)
+
+export const updateOrderInfo = (id, params) => request.put(`/v1/order/${id}`, params)
